HW5SERVER/tests/output/t22.out
lli: tmp.ll:39:11: error: '%t0' defined with type 'i8' but expected 'i32'
store i32 %t0 , i8* %vb
          ^
